--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>MagicCursor.js</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="loco.css" />
+    <link rel="icon" type="image/x-icon" href="./magicCursorFavicon.png">
   </head>
   <body>
     <script src="magic-cursor.js"></script>
