Play Button, Outer Border Type & Width added

--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
           const magicCursor = new MagicCursor({
             backgroundColor: "white",
             borderColor: "white",
+            // References :- https://developer.mozilla.org/en-US/docs/Web/CSS/border
+            // outerBorderWidth: '2px',  // With the help of it you can increase width of outer circle
+            // outerBorderType: 'dashed',  // With the help of it you can set Border style of outer circle
+            // playButton: true,  // With the help of it you can convert inner dot into play Button
           });
 
           
